kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tekton-monorepo-interceptor
  name: tekton-monorepo-interceptor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tekton-monorepo-interceptor
  strategy: {}
  template:
    metadata:
      labels:
        app: tekton-monorepo-interceptor
    spec:
      containers:
      - image: ko://github.com/arshchimni/tekton-monorepo-interceptor
        name: tekton-monorepo-interceptor
        ports:
        - containerPort: 9090
        resources: {}
