kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-monorepo-interceptor
  name: tekton-monorepo-interceptor
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tekton-monorepo-interceptor
status:
  loadBalancer: {}
