kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el-github
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: "tekton-trigger"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: el-github-listener
            port:
              number: 8080
